--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.42.0",
 		"globals": "^15.8.0",
+		"hash-dialog-modal": "^1.0.4",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.5",
 		"svelte": "^4.2.18",
