--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@sun-typeface/suit": "^2.0.4",
 		"@sveltejs/adapter-static": "^3.0.2",
 		"@sveltejs/kit": "^2.5.18",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
@@ -23,6 +24,7 @@
 		"hash-dialog-modal": "^1.0.4",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.5",
+		"print-friendly": "^0.3.2",
 		"svelte": "^4.2.18",
 		"svelte-check": "^3.8.4",
 		"tslib": "^2.6.3",
