--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"print-friendly": "^0.3.2",
 		"svelte": "^4.2.18",
 		"svelte-check": "^3.8.4",
+		"swipe-scroller": "^1.0.6",
 		"tslib": "^2.6.3",
 		"typescript": "^5.5.3",
 		"typescript-eslint": "8.0.0-alpha.44",
