--- a/package.json
+++ b/package.json
@@ -12,27 +12,27 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sun-typeface/suit": "^2.0.4",
-		"@sveltejs/adapter-static": "^3.0.2",
-		"@sveltejs/kit": "^2.5.18",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
-		"@types/eslint": "^8.56.10",
-		"eslint": "^9.7.0",
+		"@sun-typeface/suit": "^2.0.5",
+		"@sveltejs/adapter-static": "^3.0.4",
+		"@sveltejs/kit": "^2.5.26",
+		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"@types/eslint": "^9.6.1",
+		"eslint": "^9.9.1",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.42.0",
-		"globals": "^15.8.0",
+		"eslint-plugin-svelte": "^2.43.0",
+		"globals": "^15.9.0",
 		"hash-dialog-modal": "^1.0.4",
 		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.5",
+		"prettier-plugin-svelte": "^3.2.6",
 		"print-friendly": "^0.3.2",
-		"svelte": "^4.2.18",
-		"svelte-check": "^3.8.4",
+		"svelte": "^4.2.19",
+		"svelte-check": "^4.0.1",
 		"swipe-scroller": "^1.0.6",
-		"tslib": "^2.6.3",
-		"typescript": "^5.5.3",
-		"typescript-eslint": "8.0.0-alpha.44",
-		"vite": "^5.3.4"
+		"tslib": "^2.7.0",
+		"typescript": "^5.5.4",
+		"typescript-eslint": "^8.4.0",
+		"vite": "^5.4.3"
 	},
 	"type": "module",
-	"packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
+	"packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1"
 }
