--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,8 @@ node_modules
 Thumbs.db
 
 # Env
-.env
-.env.*
-!.env.example
-!.env.test
+.env.local
+.env.*.local
 
 # Vite
 vite.config.js.timestamp-*
