--- a/package.json
+++ b/package.json
@@ -13,26 +13,26 @@
 	},
 	"devDependencies": {
 		"@sun-typeface/suit": "^2.0.5",
-		"@sveltejs/adapter-static": "^3.0.4",
-		"@sveltejs/kit": "^2.5.26",
-		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"@sveltejs/adapter-static": "^3.0.5",
+		"@sveltejs/kit": "^2.5.28",
+		"@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
 		"@types/eslint": "^9.6.1",
-		"eslint": "^9.9.1",
+		"eslint": "^9.10.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.43.0",
+		"eslint-plugin-svelte": "^2.44.0",
 		"globals": "^15.9.0",
 		"hash-dialog-modal": "^1.0.4",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
 		"print-friendly": "^0.3.2",
-		"svelte": "^4.2.19",
-		"svelte-check": "^4.0.1",
+		"svelte": "5.0.0-next.257",
+		"svelte-check": "^4.0.2",
 		"swipe-scroller": "^1.0.6",
 		"tslib": "^2.7.0",
-		"typescript": "^5.5.4",
-		"typescript-eslint": "^8.4.0",
-		"vite": "^5.4.3"
+		"typescript": "^5.6.2",
+		"typescript-eslint": "^8.6.0",
+		"vite": "^5.4.6"
 	},
 	"type": "module",
-	"packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1"
+	"packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c"
 }
