--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@sun-typeface/suit": "^2.0.5",
 		"@sveltejs/adapter-static": "^3.0.5",
 		"@sveltejs/kit": "^2.5.28",
-		"@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^9.6.1",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.10.0",
@@ -28,7 +28,7 @@
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.6",
 		"print-friendly": "^0.3.2",
-		"svelte": "5.0.0-next.257",
+		"svelte": "^5.0.2",
 		"svelte-check": "^4.0.2",
 		"swipe-scroller": "^1.0.6",
 		"tailwindcss": "^3.4.12",
