--- a/package.json
+++ b/package.json
@@ -12,27 +12,34 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@eslint/compat": "^1.2.7",
+		"@eslint/js": "^9.23.0",
 		"@sun-typeface/suit": "^2.0.5",
 		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.16.1",
+		"@sveltejs/kit": "^2.20.2",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@types/eslint": "^9.6.1",
-		"eslint": "^9.18.0",
-		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-svelte": "^2.46.1",
-		"globals": "^15.14.0",
+		"@types/node": "^22.13.13",
+		"eslint": "^9.23.0",
+		"eslint-config-prettier": "^10.1.1",
+		"eslint-plugin-svelte": "^3.3.3",
+		"globals": "^16.0.0",
 		"hash-dialog-modal": "^1.0.4",
-		"prettier": "^3.4.2",
+		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.3.3",
 		"print-friendly": "^0.4.1",
-		"svelte": "^5.19.1",
-		"svelte-check": "^4.1.4",
+		"svelte": "^5.25.3",
+		"svelte-check": "^4.1.5",
 		"swipe-scroller": "^1.0.7",
 		"tslib": "^2.8.1",
-		"typescript": "^5.7.3",
-		"typescript-eslint": "^8.21.0",
-		"vite": "^6.0.11"
+		"typescript": "^5.8.2",
+		"typescript-eslint": "^8.28.0",
+		"vite": "^6.2.3"
 	},
 	"type": "module",
-	"packageManager": "pnpm@9.15.2+sha512.93e57b0126f0df74ce6bff29680394c0ba54ec47246b9cf321f0121d8d9bb03f750a705f24edc3c1180853afd7c2c3b94196d0a3d53d3e069d9e2793ef11f321"
+	"packageManager": "pnpm@10.6.5+sha512.cdf928fca20832cd59ec53826492b7dc25dc524d4370b6b4adbf65803d32efaa6c1c88147c0ae4e8d579a6c9eec715757b50d4fa35eea179d868eada4ed043af",
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"esbuild"
+		]
+	}
 }
